@@ -40,6 +40,13 @@ sub myWriteMakefile
     $share_config->set(config_debug_fake32 => 1);
     $diag{config}->{config_debug_fake32} = 1;
   }
+  if($ENV{FFI_PLATYPUS_NO_ALLOCA})
+  {
+    print "NO_ALLOCA:\n";
+    print "  + alloca() will not be used, even if your platform supports it.\n";
+    $share_config->set(config_no_alloca => 1);
+    $diag{config}->{config_no_alloca} = 1;
+  }
 
   delete $args{PM};
   $args{XSMULTI} = 1;
